<resources>
    <string name="app_name">Keyboard</string>
    <string name="noteA">A</string>
    <string name="noteB">B</string>
    <string name="noteC">C</string>
    <string name="d_note">D</string>
    <string name="e_note">E</string>
    <string name="f_note">F</string>
    <string name="g_note">G</string>
    <string name="c_sharp_note">C#</string>
    <string name="d_sharp_note">D#</string>
    <string name="f_sharp_note">F#</string>
    <string name="a_sharp_note">A#</string>
    <string name="b_sharp_note">B#</string>
    <string name="g_sharp_note">G#</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="song">song</string>
    <string name="play_back">Play Back</string>
    <string name="record">Record</string>
    <string name="scale">Scale</string>
</resources>
